--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ ACCESS_TOKEN_SECRET=ACCESSTOKENSECRET
 REFRESH_TOKEN_SECRET=REFRESH_TOKENSECRET
 ACCESS_TOKEN_LIVE=60
 REFRESH_TOKEN_LIVE=720
+GLOBAL_PREFIX=
